Update link in master list email

--- a/corehq/apps/domain/templates/domain/email/fm_outreach.html
+++ b/corehq/apps/domain/templates/domain/email/fm_outreach.html
@@ -16,7 +16,7 @@
 <p>
   If this project space does represent a new real project, let me know by updating
   a few of my settings as described on the 
-  <a href="https://confluence.dimagi.com/display/internal/Update+the+Master+List">wiki</a>. 
+  <a href="https://confluence.dimagi.com/pages/viewpage.action?pageId=18908393">wiki</a>.
 </p>
 
 <p>
