--- a/corehq/apps/reminders/templates/reminders/partial/complex_message_table.html
+++ b/corehq/apps/reminders/templates/reminders/partial/complex_message_table.html
@@ -38,7 +38,7 @@
         </th>
         <th class="span5" data-bind="visible: isSurveyVisible">{% trans 'Survey' %}</th>
         <th class="span5" data-bind="visible: isMessageVisible">{% trans 'Message' %}</th>
-        <th class="span5" data-bind="visible: true">{% trans 'Timeout Intervals' %}</th>
+        <th class="span5" data-bind="visible: $parent.areTimeoutsVisible()">{% trans 'Timeout Intervals' %}</th>
         <th class="span1" data-bind="visible: $parent.isEventDeleteButtonVisible"></th>
     </thead>
     <tbody data-bind="foreach: { data: eventObjects, afterAdd: refreshEventsListUI }">
@@ -72,7 +72,7 @@
                                && $index() + 1 !== $parent.messageTranslations().length" />
             </div>
         </td>
-        <td data-bind="visible: true">
+        <td data-bind="visible: $parent.areTimeoutsVisible()">
             <input type="text"
                    name="callback_timeout_intervals"
                    class="input-small"
