trying band-aid for case with broken history

--- a/corehq/ex-submodules/casexml/apps/case/templates/case/partials/case_hierarchy.html
+++ b/corehq/ex-submodules/casexml/apps/case/templates/case/partials/case_hierarchy.html
@@ -62,6 +62,13 @@
     </thead>
     <tbody>
         {% for case in case_list %}
+        {% if case == None %}
+        <tr>
+            <td>
+                {% trans "Parent case not found" %}
+            </td>
+        </tr>
+        {% else %}
         <tr data-tt-id="{{ case.case_id }}"
             class="{% if case.closed %}case-closed{% endif %}"
             {% if case.treetable_parent_node_id %}
@@ -133,6 +140,7 @@
             <td>{{ column.value|safe }}</td>
             {% endfor %}
         </tr>
+        {% endif%}
 
         {% empty %}
         <tr>
