take cloudcare out of beta

--- a/corehq/apps/cloudcare/templates/cloudcare/base.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/base.html
@@ -6,7 +6,7 @@
 {% block page-title %}
     <ul class="breadcrumb">
         <li>
-            <a href="{% url "cloudcare_default" domain %}"><strong>CloudCare</strong></a><sup>beta</sup>
+            <a href="{% url "cloudcare_default" domain %}"><strong>{% trans "CloudCare" %}</strong></a>
         </li>
     </ul>
 {% endblock %}
