--- a/corehq/apps/reports_core/templates/reports_core/base_template_new.html
+++ b/corehq/apps/reports_core/templates/reports_core/base_template_new.html
@@ -102,7 +102,9 @@
 
 {% block main_column %}
 <div id="report-error" class="alert alert-error hide">
+    {% blocktrans %}
     There was an error rendering your report.
+    {% endblocktrans %}
 </div>
 
 <div class="report-controls">
