cleanup flower.less and move mixins and variables out

--- a/corehq/apps/style/static/public/less/includes/variables.less
+++ b/corehq/apps/style/static/public/less/includes/variables.less
@@ -10,3 +10,19 @@
 
 //** Large `.form-control` height
 @input-height-extra-large:        (ceil(@font-size-extra-large * @line-height-extra-large) + (@padding-extra-large-vertical * 2) + 2);
+
+// CommCare Flower Style Variables
+@flower-size-lg: 465px;
+@flower-size-md: 380px;
+@flower-size-sm: 290px;
+@flower-size-xs: 280px;
+
+@flower-icon-size-lg: 138px;
+@flower-icon-size-md: 112px;
+@flower-icon-size-sm: 86px;
+@flower-icon-size-xs: 82px;
+
+@flower-icon-stroke-lg: 8px;
+@flower-icon-stroke-md: 6px;
+@flower-icon-stroke-sm: 5px;
+@flower-icon-stroke-xs: 5px;
