--- a/corehq/apps/style/static/public/less/components/background.less
+++ b/corehq/apps/style/static/public/less/components/background.less
@@ -5,5 +5,6 @@
   -o-background-size: cover;
   background-size: cover;
   max-width: 100%;
-  height: 200px;
+  height: @bg-static-window-height;
+  background-color: @cc-text;
 }
