--- a/corehq/apps/style/static/public/less/public-style.less
+++ b/corehq/apps/style/static/public/less/public-style.less
@@ -4,9 +4,12 @@
 @import "includes/mixins";
 
 @import "components/background";
+@import "components/type";
 @import "components/section";
 @import "components/buttons";
 @import "components/navbar";
 @import "components/form";
 @import "components/flower";
+@import "components/graphic";
 @import "components/misc";
+@import "components/footer";
