fix bad javascript syntax

--- a/corehq/apps/cloudcare/templates/cloudcare/cloudcare_home.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/cloudcare_home.html
@@ -53,7 +53,7 @@
         newWindow: "{% trans "open in new window" %}",
         deleteSaved: "{% trans "Permanently delete this form? You will not be able to return to it later." %}",
         deleteSuccess: "{% trans "Form was deleted." %}",
-        caseListError: "{% trans "Unable to load the case list. If you are using a filter expression please double check the syntax and try again. Please report an issue if this problem persists." %}"
+        caseListError: "{% trans "Unable to load the case list. If you are using a filter expression please double check the syntax and try again. Please report an issue if this problem persists." %}",
         dirty: "{% trans "You have not submitted this form. Click 'Cancel' to continue working on this form. If you click 'OK' you can resume work on this form later." %}"
     };
 
