--- a/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
+++ b/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
@@ -68,11 +68,11 @@
                 {% with property_hash|dict_lookup:export.name as properties %}
                   {% if properties.size %}
                       {% if export.app_id %}
-                      <a href="{% url "form_multimedia_export" domain %}?app_id={{export.app_id}}&xmlns={{export.xmlns}}&export_id={{properties.export_id}}&{{ get_filter_params.urlencode|safe }}&name={{export.name}}"
+                      <a href="{% url "form_multimedia_export" domain %}?app_id={{export.app_id}}&amp;xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
                          class="btn btn-primary dl-export" ><i
                          class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
                      {% else %}
-                      <a href="{% url "form_multimedia_export" domain %}?xmlns={{export.xmlns}}&export_id={{properties.export_id}}&{{ get_filter_params.urlencode|safe }}&name={{export.name}}"
+                      <a href="{% url "form_multimedia_export" domain %}?xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
                          class="btn btn-primary dl-export" ><i
                          class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
                      {% endif %}
