just a small tweak to the navbar less

--- a/corehq/apps/style/static/style/less/b3-migration/navbar.less
+++ b/corehq/apps/style/static/style/less/b3-migration/navbar.less
@@ -1,6 +1,9 @@
 .navbar-hq-main-menu {
   .btn-toolbar {
     margin-top: 15px;
+    &.pull-right {
+      margin-right: 15px;
+    }
 
     a.btn {
       font-size: 13px;
