--- a/corehq/apps/style/templates/style/base.html
+++ b/corehq/apps/style/templates/style/base.html
@@ -44,6 +44,19 @@
 
         {% block stylesheets %}{% endblock stylesheets %}
 
+        {% if request.use_select2 %}
+        {% compress css %}
+            <link type="text/css"
+                  rel="stylesheet"
+                  media="all"
+                  href="{% new_static 'style/lib/select2/select2.css' %}" />
+            <link type="text/css"
+                  rel="stylesheet"
+                  media="all"
+                  href="{% new_static 'style/lib/select2/select2-bootstrap.css' %}" />
+        {% endcompress %}
+        {% endif %}
+
         {# Core Libraries #}
         {% compress js %}
         <script type="text/javascript" src="{% new_static 'style/lib/jquery/jquery-1.11.1.min.js' %}"></script>
@@ -171,6 +184,12 @@
         <script type="text/javascript" src="{% new_static 'style/js/layout.js' %}"></script>
         <script type="text/javascript" src="{% new_static 'hqwebapp/js-custom/hq.helpers.js' %}"></script>
         {% endcompress %}
+
+        {% if request.use_select2 %}
+        {% compress js %}
+        <script type="text/javascript" src="{% new_static 'style/lib/select2/select2.js' %}"></script>
+        {% endcompress %}
+        {% endif %}
 
         {% compress js %}
         {% block js %}{% endblock js %}
