minor adjustments so the layout doesn't jump around so much

--- a/corehq/apps/style/static/style/less/components-3/breadcrumbs.less
+++ b/corehq/apps/style/static/style/less/components-3/breadcrumbs.less
@@ -2,7 +2,7 @@
   font-size: 24px;
   font-weight: normal;
   background-color: #ffffff;
-  padding: 12px 20px;
+  padding: 13px 20px 11px;
   border-bottom: 1px solid #dbdbdb;
   margin-bottom: 0px;
 
