what's an eport?

--- a/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
+++ b/corehq/apps/reports/templates/reports/reportdata/excel_export_data.html
@@ -1,4 +1,4 @@
-{% extends eport_base|default:"reports/async/default.html" %}
+{% extends report_base|default:"reports/async/default.html" %}
 {% load xforms_extras %}
 {% load hq_shared_tags %}
 {% load i18n %}
