--- a/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
+++ b/corehq/apps/reports/templates/reports/partials/saved_custom_exports.html
@@ -9,7 +9,9 @@
             <th>{% trans "Edit" %}</th>
         {% endif %}
         <th>{% trans "Download" %}</th>
-        <th>{% trans "Download Multimedia" %}</th>
+        {% if not deid %}
+            <th>{% trans "Download Multimedia" %}</th>
+        {% endif %}
         <th>
             {% trans "Add to Custom Bulk Export" %} <i class="icon-white icon-info-sign custom-bulk-export-info"></i>
             <small style="display: block;">
@@ -64,23 +66,25 @@
                    data-bind="click: requestDownload"
                    class="dl-export btn btn-primary"><i class="icon-download-alt icon-white"></i> {% trans "Download" %}</a>
             </td>
-            <td class="cell-vertical-centered">
-                {% with property_hash|dict_lookup:export.name as properties %}
-                  {% if properties.size %}
-                      {% if export.app_id %}
-                      <a href="{% url "form_multimedia_export" domain %}?app_id={{export.app_id}}&amp;xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
-                         class="btn btn-primary dl-export" ><i
-                         class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
-                     {% else %}
-                      <a href="{% url "form_multimedia_export" domain %}?xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
-                         class="btn btn-primary dl-export" ><i
-                         class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
-                     {% endif %}
-                  {% else %}
-                      <span class="label">{% trans "No Multimedia" %}</span>
-                  {% endif %}
-                {% endwith %}
-            </td>
+            {% if not deid %}
+                <td class="cell-vertical-centered">
+                    {% with property_hash|dict_lookup:export.name as properties %}
+                      {% if properties.size %}
+                          {% if export.app_id %}
+                          <a href="{% url "form_multimedia_export" domain %}?app_id={{export.app_id}}&amp;xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
+                             class="btn btn-primary dl-export" ><i
+                             class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
+                         {% else %}
+                          <a href="{% url "form_multimedia_export" domain %}?xmlns={{export.xmlns}}&amp;export_id={{properties.export_id}}&amp;{{ get_filter_params.urlencode|safe }}&amp;name={{export.name}}"
+                             class="btn btn-primary dl-export" ><i
+                             class="icon-download-alt icon-white"></i> {% trans "Download " %} <br> ({{properties.size}})</a>
+                         {% endif %}
+                      {% else %}
+                          <span class="label">{% trans "No Multimedia" %}</span>
+                      {% endif %}
+                    {% endwith %}
+                </td>
+            {% endif %}
             <td class="form-inline">
                 {% ifequal export.default_format custom_bulk_export_format %}
                     <label>
