--- a/corehq/apps/reports/templates/reports/form/partials/single_form.html
+++ b/corehq/apps/reports/templates/reports/form/partials/single_form.html
@@ -25,6 +25,7 @@ requires imports/proptable.html to be included in the main template
 }
 .form-data-table, .form-data-group-table {
     overflow: scroll;
+    width: 800px;
 }
 </style>
 <script src="{% static 'cloudcare/js/util.js' %}"></script>
@@ -292,18 +293,16 @@ requires imports/proptable.html to be included in the main template
             </a>
         </label>
         {% endif %}
-        <div{% if not side_pane %} class="row-fluid"{% endif %}>
-            <table class="table table-bordered form-data-table {% if not side_pane %}span6{% endif %}">
-                <tr>
-                    <th class="span6">
-                        <span class="form-data-readable">{% trans "Question" %}</span>
-                        <span class="form-data-raw">{% trans "Question ID" %}</span>
-                    </th>
-                    <th class="span6">{% trans "Response" %}</th>
-                </tr>
-                {% include 'reports/form/partials/single_form_tree.html' with questions=form_data %}
-            </table>
-        </div>
+        <table class="table table-bordered form-data-table">
+            <tr>
+                <th class="span6">
+                    <span class="form-data-readable">{% trans "Question" %}</span>
+                    <span class="form-data-raw">{% trans "Question ID" %}</span>
+                </th>
+                <th class="span6">{% trans "Response" %}</th>
+            </tr>
+            {% include 'reports/form/partials/single_form_tree.html' with questions=form_data %}
+        </table>
     </div>
 
     {% if cases %}
