add link to prime restore doc page on wiki

--- a/corehq/apps/hqadmin/templates/hqadmin/prime_restore_cache.html
+++ b/corehq/apps/hqadmin/templates/hqadmin/prime_restore_cache.html
@@ -13,6 +13,11 @@
                 <h1>Prime OTA Restore Cache</h1>
             </div>
             <p>Use this form to generate the restore response for users and cache the results.</p>
+            <p>
+                <a href="https://confluence.dimagi.com/display/commcarehq/Restoring+Many+Cases+Quickly+to+a+CommCare+Device" target="_blank">
+                More info
+                </a>
+            </p>
             </br>
             <div id="prime-restore-cache-form">
                 {% crispy_b3 form %}
