Flag problematic applyBindings.

--- a/corehq/apps/builds/templates/builds/edit_menu.html
+++ b/corehq/apps/builds/templates/builds/edit_menu.html
@@ -176,6 +176,7 @@
         }
 
         var buildsMenu = new Menu();
+        // FIXME
         ko.applyBindings(buildsMenu);
 
         function postGo(url, params) {
