--- a/corehq/apps/cleanup/templates/cleanup/reassign_cases_to_correct_owner.html
+++ b/corehq/apps/cleanup/templates/cleanup/reassign_cases_to_correct_owner.html
@@ -65,6 +65,7 @@
                 }
             };
         }
+        // FIXME
         ko.applyBindings(new ReassignCasesToCorrectOwner(results));
     }());
     </script>
