--- a/corehq/apps/migration/templates/migration/resubmit_for_users.html
+++ b/corehq/apps/migration/templates/migration/resubmit_for_users.html
@@ -112,6 +112,7 @@
                     return self.post('debug');
                 };
             }
+            // FIXME
             ko.applyBindings(new ResubmitForUsersUI());
         });
     </script>
