--- a/corehq/apps/reminders/templates/reminders/partial/add_keyword.html
+++ b/corehq/apps/reminders/templates/reminders/partial/add_keyword.html
@@ -123,6 +123,7 @@
     
     $(function(){
         kvm = KeywordActionsViewModel({{ form.current_values|JSON }});
+        // FIXME
         ko.applyBindings(kvm);
     });
 </script>
