--- a/corehq/apps/sms/templates/sms/settings.html
+++ b/corehq/apps/sms/templates/sms/settings.html
@@ -116,6 +116,7 @@
             "count_messages_as_read_by_anyone" : {{ form.count_messages_as_read_by_anyone.value|JSON }},
             "send_to_duplicated_case_numbers" : {{ form.send_to_duplicated_case_numbers.value|JSON }},
         });
+        // FIXME
         ko.applyBindings(svm);
     });
 </script>
