--- a/corehq/apps/sms/templates/sms/add_backend.html
+++ b/corehq/apps/sms/templates/sms/add_backend.html
@@ -38,7 +38,7 @@
         "phone_numbers": {{ form.phone_numbers.value|default:'[]'|safe }},
         "phone_number_required_text": "{% trans 'You must have at least one phone number.' %}",
     });
-    ko.applyBindings(svm, document.getElementById("settings_form"));
+    ko.applyBindings(svm, $("#settings_form").get(0));
 </script>
 {% endblock %}
 
