Additional stats in Global stats page for EWS and ILS

--- a/custom/ilsgateway/templates/ilsgateway/global_stats.html
+++ b/custom/ilsgateway/templates/ilsgateway/global_stats.html
@@ -10,38 +10,58 @@
     </thead>
     <tbody>
         <tr role="row">
-            <td>Supply Points</td>
-            <td>{{ supply_points }}</td>
+            <td>Country</td>
+            <td>{{ country }}</td>
+        </tr>
+        <tr role="row">
+            <td>Region</td>
+            <td>{{ region }}</td>
+        </tr>
+        <tr role="row">
+            <td>District</td>
+            <td>{{ district }}</td>
+        </tr>
+        <tr role="row">
+            <td>Entities that report stock</td>
+            <td>{{ entities_reported_stock }}</td>
         </tr>
         <tr role="row">
             <td>Facilities</td>
             <td>{{ facilities }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Contacts</td>
             <td>{{ contacts }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Web Users</td>
             <td>{{ web_users }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
+            <td>Admin web users</td>
+            <td>{{ web_users_admins }}</td>
+        </tr>
+        <tr role='row'>
+            <td>Read only web users</td>
+            <td>{{ web_users_read_only }}</td>
+        </tr>
+        <tr role='row'>
             <td>Products</td>
             <td>{{ products }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Product stocks</td>
             <td>{{ product_stocks }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Stock transactions</td>
             <td>{{ stock_transactions }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Inbound messages</td>
             <td>{{ inbound_messages }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Outbound messages</td>
             <td>{{ outbound_messages }}</td>
         </tr>
