--- a/custom/ewsghana/templates/ewsghana/global_stats.html
+++ b/custom/ewsghana/templates/ewsghana/global_stats.html
@@ -10,42 +10,105 @@
     </thead>
     <tbody>
         <tr role="row">
-            <td>Supply Points</td>
-            <td>{{ supply_points }}</td>
+            <td>Country</td>
+            <td>{{ country }}</td>
+        </tr>
+        <tr role="row">
+            <td>Region</td>
+            <td>{{ region }}</td>
+        </tr>
+        <tr role="row">
+            <td>District</td>
+            <td>{{ district }}</td>
+        </tr>
+        <tr role="row">
+            <td>Entities that report stock</td>
+            <td>{{ entities_reported_stock }}</td>
         </tr>
         <tr role="row">
             <td>Facilities</td>
             <td>{{ facilities }}</td>
         </tr>
-       <tr role='row'>
+        <tr role="row">
+            <td>Clinic</td>
+            <td>{{ clinic }}</td>
+        </tr>
+        <tr role="row">
+            <td>CHPS Facility</td>
+            <td>{{ chps_facility }}</td>
+        </tr>
+        <tr role="row">
+            <td>District Hospital</td>
+            <td>{{ district_hospital }}</td>
+        </tr>
+        <tr role="row">
+            <td>Health Centre</td>
+            <td>{{ health_centre }}</td>
+        </tr>
+        <tr role="row">
+            <td>Hospital</td>
+            <td>{{ hospital }}</td>
+        </tr>
+        <tr role="row">
+            <td>Psychiatric Hospital</td>
+            <td>{{ psychiatric_hospital }}</td>
+        </tr>
+        <tr role="row">
+            <td>Regional Medical Store</td>
+            <td>{{ regional_medical_store }}</td>
+        </tr>
+        <tr role="row">
+            <td>Regional Hospital</td>
+            <td>{{ regional_hospital }}</td>
+        </tr>
+        <tr role="row">
+            <td>Polyclinic</td>
+            <td>{{ polyclinic }}</td>
+        </tr>
+        <tr role="row">
+            <td>Teaching Hospital</td>
+            <td>{{ teaching_hospital }}</td>
+        </tr>
+        <tr role="row">
+            <td>Central Medical Store</td>
+            <td>{{ central_medical_store }}</td>
+        </tr>
+        <tr role='row'>
             <td>Contacts</td>
             <td>{{ contacts }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Web Users</td>
             <td>{{ web_users }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
+            <td>Admin web users</td>
+            <td>{{ web_users_admins }}</td>
+        </tr>
+        <tr role='row'>
+            <td>Read only web users</td>
+            <td>{{ web_users_read_only }}</td>
+        </tr>
+        <tr role='row'>
             <td>Products</td>
             <td>{{ products }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Product stocks</td>
             <td>{{ product_stocks }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Stock transactions</td>
             <td>{{ stock_transactions }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Inbound messages</td>
             <td>{{ inbound_messages }}</td>
         </tr>
-       <tr role='row'>
+        <tr role='row'>
             <td>Outbound messages</td>
             <td>{{ outbound_messages }}</td>
         </tr>
     </tbody>
-
 </table>
 {% endblock %}
