--- a/corehq/apps/app_manager/templates/app_manager/summary_new.html
+++ b/corehq/apps/app_manager/templates/app_manager/summary_new.html
@@ -7,57 +7,36 @@
 {% load djangular_tags %}
 
 {% block stylesheets %}
-{#{% compress css %}#}
+{% compress css %}
 {#    <link type="text/less"#}
 {#          rel="stylesheet"#}
 {#          media="all"#}
 {#          href="{% new_static 'dashboard/less/dashboard.less' %}" />#}
-{#{% endcompress %}#}
+{% endcompress %}
 {% endblock stylesheets %}
 
-{% block js %}{% endblock js %}
+{% block js %}
+    <script type="text/javascript" src="{% new_static 'app_manager/js/app_summary.ng.js' %}"></script>
+{% endblock js %}
 
 {% block js-inline %} {{ block.super }}
     <script type="text/javascript">
         (function (angular, undefined) {
             'use strict';
 
-            var summaryModule = angular.module('appSummary', ['ng.django.rmi']);
-            summaryModule.config(['$httpProvider', function($httpProvider) {
+            var summaryApp = angular.module('SummaryApp', ['SummaryModule']);
+            summaryApp.config(['$httpProvider', function($httpProvider) {
                 $httpProvider.defaults.headers.common['X-Requested-With'] = 'XMLHttpRequest';
             }]);
-            summaryModule.config(["djangoRMIProvider", function(djangoRMIProvider) {
+            summaryApp.config(["djangoRMIProvider", function(djangoRMIProvider) {
                 djangoRMIProvider.configure({% djng_current_rmi %});
             }]);
 
-            var controllers = {};
-            controllers.CaseController = function ($scope, djangoRMI) {
-                var self = this;
-
-                self.init = function (attrs) {
-                    self.refreshData();
-                };
-
-                self.refreshData = function () {
-                    djangoRMI.get_case_data({
-                    }).success(self.updateView).error(self.retry);
-                };
-
-                self.updateView = function (data) {
-                    if (data.success) {
-                        console.log(data);
-                    }
-                };
-
-                self.retry = function () {
-                    self.retries ++;
-                    if (self.retries <= 10) {
-                        self.refreshData();
-                    }
-                };
-                self.init();
-            };
-            summaryModule.controller(controllers);
+            summaryApp.constant('summaryConfig', {
+                staticRoot: '{{ STATIC_URL }}',
+                vellumTypes: {{ VELLUM_TYPES|JSON }},
+                formNameMap: {{ form_name_map|JSON }}
+            });
 
         }(window.angular));
     </script>
@@ -68,12 +47,12 @@
 {% block page_content %}
     <div role="tabpanel">
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#form_summary" role="tab" data-toggle="tab">{% trans "Form Summary" %}</a></li>
-            <li role="presentation"><a href="#case_summary" role="tab" data-toggle="tab">{% trans "Case Summary" %}</a></li>
+            <li role="presentation"><a href="#form_summary" role="tab" data-toggle="tab">{% trans "Form Summary" %}</a></li>
+            <li role="presentation" class="active"><a href="#case_summary" role="tab" data-toggle="tab">{% trans "Case Summary" %}</a></li>
         </ul>
     </div>
-    <div class="tab-content" ng-app="appSummary">
-        <div role="tabpanel" class="tab-pane active" id="form_summary">
+    <div class="tab-content" ng-app="SummaryApp">
+        <div role="tabpanel" class="tab-pane" id="form_summary">
             <div id="langs">
                 {% if not app.is_remote_app %}
                 Language:
@@ -91,7 +70,7 @@
             </div>
             {% include 'app_manager/partials/app_summary.html' %}
         </div>
-        <div role="tabpanel" class="tab-pane" id="case_summary" ng-controller="CaseController">
+        <div role="tabpanel" class="tab-pane active" id="case_summary" ng-controller="CaseController">
             {% include 'app_manager/partials/case_summary.html' %}
         </div>
     </div>
